# jina-eurobert

./: .gitignore  README.md  pyproject.toml
configs/: distill_8xa100.yaml
scripts/: download_datasets.py  eval_mteb.py  precompute_teacher_mrl.py  train_distill.py
src/jina_eurobert/: __init__.py  collators.py  config.py  data.py  datasets_registry.py  device.py  hf_datasets.py  losses.py  models.py  trainer.py
tests/: test_smoke.py
