[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jina-eurobert"
version = "0.1.0"
description = "Distill Qwen3-Embedding-4B into EuroBERT-210m for MTEB retrieval and STS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=5.5.0",
    "transformers>=4.51.0",
    "torch>=2.1.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "mteb>=1.38.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3.0"]

[tool.setuptools.packages.find]
where = ["src", "scripts"]
include = ["jina_eurobert*", "scripts*"]

[project.scripts]
jina-eurobert-precompute = "scripts.precompute_teacher_mrl:main"
jina-eurobert-train = "scripts.train_distill:main"
jina-eurobert-eval = "scripts.eval_mteb:main"
jina-eurobert-download-datasets = "scripts.download_datasets:main"
